@@ -15,9 +15,9 @@ plugins {
   id 'idea'
   id 'eclipse'
   id 'project-report'
-  id 'com.diffplug.spotless' version '6.11.0'
-  id 'com.github.johnrengelman.shadow' version '6.1.0'
-  id "org.sonarqube" version "3.4.0.2513"
+  id 'com.diffplug.spotless' version '6.17.0'
+  id 'com.github.johnrengelman.shadow' version '8.1.0'
+  id "org.sonarqube" version "4.0.0.2929"
   id 'jacoco'
 }
 
@@ -26,12 +26,12 @@ group = 'com.github.tomakehurst'
 project.ext {
   versions = [
     handlebars     : '4.3.1',
-    jetty          : '9.4.49.v20220914',
+    jetty          : '11.0.12',
     guava          : '31.1-jre',
-    jackson        : '2.13.4.20221013',
-    xmlUnit        : '2.9.0',
-    jsonUnit       : '2.36.0',
-    junitJupiter   : '5.9.1'
+    jackson        : '2.14.2',
+    xmlUnit        : '2.9.1',
+    jsonUnit       : '2.37.0',
+    junitJupiter   : '5.9.2'
   ]
 }
 
@@ -49,26 +49,26 @@ dependencies {
   api "org.eclipse.jetty.http2:http2-server"
   api "org.eclipse.jetty:jetty-alpn-server"
   api "org.eclipse.jetty:jetty-alpn-java-server"
-  api "org.eclipse.jetty:jetty-alpn-openjdk8-server"
+  api "org.eclipse.jetty:jetty-alpn-server"
   api "org.eclipse.jetty:jetty-alpn-java-client"
-  api "org.eclipse.jetty:jetty-alpn-openjdk8-client"
+  api "org.eclipse.jetty:jetty-alpn-client"
 
   api "com.google.guava:guava:$versions.guava"
   api platform("com.fasterxml.jackson:jackson-bom:$versions.jackson")
   api "com.fasterxml.jackson.core:jackson-core",
       "com.fasterxml.jackson.core:jackson-annotations",
       "com.fasterxml.jackson.core:jackson-databind"
-  api "org.apache.httpcomponents.client5:httpclient5:5.1.3"
+  api "org.apache.httpcomponents.client5:httpclient5:5.2.1"
   api "org.xmlunit:xmlunit-core:$versions.xmlUnit"
   api "org.xmlunit:xmlunit-legacy:$versions.xmlUnit", {
     exclude group: 'junit', module: 'junit'
   }
   api "org.xmlunit:xmlunit-placeholders:$versions.xmlUnit"
   api "net.javacrumbs.json-unit:json-unit-core:$versions.jsonUnit"
-  api "com.jayway.jsonpath:json-path:2.7.0", {
+  api "com.jayway.jsonpath:json-path:2.8.0", {
     exclude group: 'org.ow2.asm', module: 'asm'
   }
-  api "org.ow2.asm:asm:9.4"
+  api "org.ow2.asm:asm:9.5"
 
   implementation "org.slf4j:slf4j-api:1.7.36"
   standaloneOnly "org.slf4j:slf4j-nop:1.7.36"
@@ -89,7 +89,7 @@ dependencies {
     exclude group: 'org.mozilla', module: 'rhino'
   }
 
-  api 'commons-fileupload:commons-fileupload:1.4',  {
+  api 'commons-fileupload:commons-fileupload:1.5',  {
     exclude group: 'commons-io', module: 'commons-io'
   }
   api "commons-io:commons-io:2.11.0"
@@ -99,26 +99,25 @@ dependencies {
   testImplementation("org.junit.platform:junit-platform-testkit")
   testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
   testImplementation("org.junit.platform:junit-platform-launcher")
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
+  testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
   testImplementation "org.hamcrest:hamcrest-core:2.2"
   testImplementation "org.hamcrest:hamcrest-library:2.2"
-  testImplementation 'org.mockito:mockito-core:4.8.1'
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
+  testImplementation 'org.mockito:mockito-core:5.2.0'
+  testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
   testImplementation "net.javacrumbs.json-unit:json-unit:$versions.jsonUnit"
   testImplementation "org.skyscreamer:jsonassert:1.2.3"
   testImplementation 'com.toomuchcoding.jsonassert:jsonassert:0.6.2'
   testImplementation 'org.awaitility:awaitility:4.2.0'
   testImplementation "com.googlecode.jarjar:jarjar:1.3"
-  testImplementation "commons-io:commons-io:2.10.0"
+  testImplementation "commons-io:commons-io:2.11.0"
   testImplementation 'org.scala-lang:scala-library:2.13.10'
   testImplementation 'com.tngtech.archunit:archunit-junit5:0.23.1'
 
   testImplementation "org.eclipse.jetty:jetty-client"
   testImplementation "org.eclipse.jetty.http2:http2-http-client-transport"
-
-  testImplementation "ch.qos.logback:logback-classic:1.3.0"
-
+  testRuntimeOnly "org.slf4j:log4j-over-slf4j:2.0.7"
+  testRuntimeOnly "ch.qos.logback:logback-classic:1.4.0"
   testRuntimeOnly files('src/test/resources/classpath file source/classpathfiles.zip', 'src/test/resources/classpath-filesource.jar')
 
   testImplementation ('net.jockx:littleproxy:1.1.3') {
@@ -127,10 +126,10 @@ dependencies {
     exclude group: 'org.slf4j', module: 'slf4j-api'
     exclude group: 'io.netty', module: 'netty-all'
   }
-  testImplementation "io.netty:netty-all:4.1.84.Final"
+  testImplementation "io.netty:netty-all:4.1.90.Final"
 
   constraints {
-    implementation "net.minidev:json-smart:2.4.8", {
+    implementation "net.minidev:json-smart:2.4.10", {
       because 'Pinning this above the transitive version from json-path to get CVE fix'
     }
   }
@@ -157,7 +156,7 @@ allprojects {
     }
     json {
       target 'src/**/*.json'
-      targetExclude '**/tmp*.json', 'src/test/resources/sample.json', 'src/main/resources/swagger/*.json'
+      targetExclude '**/tmp*.json', 'src/test/resources/sample.json', 'src/main/resources/swagger/*.json', 'src/test/resources/filesource/subdir/deepfile.json'
       simple().indentWithSpaces(2)
     }
   }
@@ -201,21 +200,24 @@ allprojects {
     mavenCentral()
   }
 
-  version = '2.35.0'
+  version = '3.0.0-beta-7'
 
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+
+  sourceCompatibility = 11
+  targetCompatibility = 11
 
   compileJava {
     options.encoding = 'UTF-8'
 
     // silences warnings about compiling against `sun` packages
     options.compilerArgs += '-XDenableSunApiLintControl'
+    options.compilerArgs += '--add-exports=java.base/sun.security.x509=ALL-UNNAMED'
   }
 
   compileTestJava {
     options.encoding = 'UTF-8'
     options.compilerArgs += '-XDenableSunApiLintControl'
+    options.compilerArgs += '--add-exports=java.base/sun.security.x509=ALL-UNNAMED'
   }
 
   test {
@@ -235,7 +237,7 @@ allprojects {
 
   jacocoTestReport {
     reports {
-      xml.enabled true
+      xml.required = true
     }
   }
   test.finalizedBy jacocoTestReport
@@ -262,7 +264,7 @@ task testJar(type: Jar, dependsOn: testClasses) {
 final DOCS_DIR = project(':').rootDir.getAbsolutePath() + '/docs-v2'
 
 jar {
-  archiveBaseName.set('wiremock-jre8')
+  archiveBaseName.set('wiremock')
   manifest {
     attributes("Main-Class": "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner")
     attributes("Add-Exports": "java.base/sun.security.x509")
@@ -270,11 +272,12 @@ jar {
 }
 
 shadowJar {
+  archiveBaseName.set('wiremock-standalone')
+  archiveClassifier.set('')
   configurations = [
     project.configurations.runtimeClasspath,
     project.configurations.standaloneOnly
   ]
-  archiveBaseName.set('wiremock-jre8-standalone')
 
   relocate "org.mortbay", 'wiremock.org.mortbay'
   relocate "org.eclipse", 'wiremock.org.eclipse'
@@ -295,7 +298,7 @@ shadowJar {
   relocate "net.sf", "wiremock.net.sf"
   relocate "com.github.jknack", "wiremock.com.github.jknack"
   relocate "org.antlr", "wiremock.org.antlr"
-  relocate "javax.servlet", "wiremock.javax.servlet"
+  relocate "jakarta.servlet", "wiremock.jakarta.servlet"
   relocate "org.checkerframework", "wiremock.org.checkerframework"
   relocate "org.hamcrest", "wiremock.org.hamcrest"
   relocate "org.slf4j", "wiremock.org.slf4j"
@@ -343,6 +346,12 @@ publishing {
     }
   }
 
+  getComponents().withType(AdhocComponentWithVariants).each { c ->
+    c.withVariantsFromConfiguration(project.configurations.shadowRuntimeElements) {
+      skip()
+    }
+  }
+
   publications {
     mavenJava(MavenPublication) { publication ->
       artifactId = "${jar.getArchiveBaseName().get()}"
@@ -363,13 +372,6 @@ publishing {
       artifact javadocJar
       artifact testJar
 
-      publication.artifacts.each {
-        // for the shaded JAR
-        if ('all' == it.classifier) {
-          it.classifier = ''
-        }
-      }
-
       pom.packaging 'jar'
       pom.withXml {
         asNode().appendNode('description', 'A web service test double for all occasions - standalone edition')
@@ -377,7 +379,6 @@ publishing {
       }
     }
   }
-
 }
 
 task checkReleasePreconditions {
@@ -389,6 +390,10 @@ task checkReleasePreconditions {
   }
 }
 publish.dependsOn checkReleasePreconditions
+project.tasks.publishMavenJavaPublicationToMavenLocal.dependsOn 'signStandaloneJarPublication'
+project.tasks.publishStandaloneJarPublicationToMavenLocal.dependsOn 'signMavenJavaPublication'
+project.tasks.publishMavenJavaPublicationToMavenRepository.dependsOn 'signStandaloneJarPublication'
+project.tasks.publishStandaloneJarPublicationToMavenRepository.dependsOn 'signMavenJavaPublication'
 
 assemble.dependsOn jar, shadowJar
 
@@ -407,6 +412,35 @@ task localRelease {
   dependsOn clean, assemble, publishToMavenLocal
 }
 
+task 'bump-beta-version' {
+  doLast {
+    def filesWithVersion = [
+      'build.gradle'                                      : { "version = '${it}" },
+      'ui/package.json'                                   : { "\"version\": \"${it}\"" },
+      'ui/package-lock.json'                              : { "\"version\": \"${it}\"" },
+      'src/main/resources/swagger/wiremock-admin-api.json': { "\"version\": \"${it}\"" },
+      'src/main/resources/swagger/wiremock-admin-api.yaml': {
+        "version: ${it}"
+      }
+    ]
+
+    def currentVersion = project.version
+    def nextVersion = "3.0.0-beta-${betaVersion + 1}"
+
+    filesWithVersion.each { fileName, lineWithVersionTemplates ->
+      def file = file(fileName)
+      def lineWithVersionTemplateList = [lineWithVersionTemplates].flatten()
+
+      lineWithVersionTemplateList.each { lineWithVersionTemplate ->
+        def oldLine = lineWithVersionTemplate.call(currentVersion)
+        def newLine = lineWithVersionTemplate.call(nextVersion)
+        println "Replacing '${oldLine}' with '${newLine}' in ${fileName}"
+        file.text = file.text.replace(oldLine, newLine)
+      }
+    }
+  }
+}
+
 task 'bump-patch-version' {
   doLast {
     def filesWithVersion = [
@@ -415,7 +449,8 @@ task 'bump-patch-version' {
       'ui/package-lock.json'                              : { "version: ${it}" },
       'src/main/resources/swagger/wiremock-admin-api.json': { "version: ${it}" },
       'src/main/resources/swagger/wiremock-admin-api.yaml': {
-        "version: ${it}" }
+        "version: ${it}"
+      }
     ]
 
     def currentVersion = project.version
@@ -443,7 +478,8 @@ task 'bump-minor-version' {
       'ui/package-lock.json'                              : { "version: ${it}" },
       'src/main/resources/swagger/wiremock-admin-api.json': { "version: ${it}" },
       'src/main/resources/swagger/wiremock-admin-api.yaml': {
-        "version: ${it}" }
+        "version: ${it}"
+      }
     ]
 
     def currentVersion = project.version
@@ -463,6 +499,13 @@ task 'bump-minor-version' {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.compilerArgs.addAll([
+    "--add-exports",
+    "java.base/sun.security.x509=ALL-UNNAMED"
+  ])
+}
+
 int getMajorVersion() {
   Integer.valueOf(project.version.substring(0, project.version.indexOf('.')))
 }
@@ -473,6 +516,10 @@ int getMinorVersion() {
 
 int getPatchVersion() {
   Integer.valueOf(project.version.substring(project.version.lastIndexOf('.') + 1))
+}
+
+int getBetaVersion() {
+  Integer.valueOf(project.version.substring(project.version.lastIndexOf('-') + 1))
 }
 
 wrapper {
